z-index fix for progress-bar

--- a/src/stylus/slides/progress-bar.styl
+++ b/src/stylus/slides/progress-bar.styl
@@ -5,7 +5,7 @@ BAR_WIDTH = 20vw
   height BAR_HEIGHT
   width 100vw
   position fixed
-  z-index 1
+  z-index 2
 
 .progress-bar::before
   animation loading 2s .3s linear infinite
